--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <h1>Some fun code examples</h1>
     <section>
         <h1><a href="tel.html" target="_blank">Enter only digits</a></h1>
+        <h1><a href="animated-slider.html" target="_blank">Animated slider</a></h1>
     </section>
 </body>
 </html>
