Animated slider touch events hotfix #02

--- a/animated-slider.html
+++ b/animated-slider.html
@@ -140,7 +140,7 @@
                     };
                 }
                 var $self = $(this);
-                $(this).touchmove(function(e) {
+                $(this).on('touchmove', function(e) {
                     alert();
                     var x = e.clientX;
                     direction = x - selectorPosition.x;
